--- a/env/.env
+++ b/env/.env
@@ -7,8 +7,8 @@ VITE_WX_APPID = 'wx7ed76fb6a6ac859c'
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
 VITE_APP_PUBLIC_BASE=/unibest/
 
-VITE_SERVER_BASEURL = 'https://ukw0y1.laf.run'
-VITE_UPLOAD_BASEURL = 'https://ukw0y1.laf.run/upload'
+VITE_SERVER_BASEURL = 'https://tea.qingnian8.com/api/bizhi'
+VITE_UPLOAD_BASEURL = 'https://tea.qingnian8.com/api/bizhi/upload'
 
 # h5是否需要配置代理
 VITE_APP_PROXY=false
