chore: 更新环境变量和清单文件中的敏感信息
将VITE_UNI_APPID、VITE_WX_APPID和manifest.json中的appid替换为占位符，以保护敏感信息

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "unibest",
-  "appid": "H57F2ACE4",
+  "appid": "XXXXXXXXXXX",
   "description": "",
   "versionName": "1.0.0",
   "versionCode": "100",
@@ -83,7 +83,7 @@
   },
   "quickapp": {},
   "mp-weixin": {
-    "appid": "wx7ed76fb6a6ac859c",
+    "appid": "XXXXXXXXX",
     "setting": {
       "urlCheck": false
     },
